# rosbag2nuscenes

./: .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  bag2scenes.py  build.sh  csv2config.py  docker_script.sh  export_data.py  main.cpp  mit.yaml  nuscenes_tutorial.ipynb  params.yaml  run.sh  scene_writer.py  tum.yaml
docker/: Dockerfile  build.sh  entrypoint.sh  run.sh
ego_pose_util/: package.xml  setup.py
euro_calibs/: calib0.yaml  calib1.yaml  calib2.yaml  calib3.yaml  calib4.yaml  calib5.yaml
include/rosbag2nuscenes/: Bag2Scenes.hpp  MessageConverter.hpp  MessageTypes.hpp  SensorDataWriter.hpp
json_util/: setup.cfg
params/: mit.yaml
pcd_util/: CMakeLists.txt
sample_data_util/: package.xml
sample_util/: package.xml  setup.cfg  setup.py
scene_util/: package.xml  setup.cfg  setup.py
src/: Bag2Scenes.cpp  MessageConverter.cpp  SensorDataWriter.cpp
urdf/: av21.urdf
